# backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  start.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
llm/: chat.py  model.py  prompt.txt
prisma/: schema.prisma
routers/: __init__.py  chat.py  health.py  home.py  recommend.py
