[tool.poetry]
name = "backend"
version = "0.1.0"
description = "the backend application of the project: flowers of the day"
authors = ["Shiwon Park <psw041115@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
