[tool.poetry]
name = "backend"
version = "0.1.0"
description = "the backend application of the project: flowers of the day"
authors = ["Shiwon Park <psw041115@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
langchain = "^0.2.1"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
prisma = "^0.13.1"
langchain-openai = "^0.1.7"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
